--- a/main.html
+++ b/main.html
@@ -17,6 +17,7 @@
 			<h2>Spy in the Amber</h2>
 			<p>By Manohar Malgonkar</p>
 			<button class="Price-block">Rs. 299</button>
+			<div></div>
 		</div>
 		<div class="hr"></div>
 		<div class="book">
@@ -24,6 +25,8 @@
 			<h2>Sacred Games</h2>
 			<p>By Vikram Chandra</p>
 			<button class="Price-block">Rs. 199</button>
+			<div></div>
+			
 		</div>
 		<div class="hr"></div>
 		<div class="book">
@@ -31,6 +34,8 @@
 			<h2>Spy in the Amber</h2>
 			<p>By Sharadindu Bandyopadhyay</p>
 			<button class="Price-block">Rs. 249</button>
+			<div></div>
+			
 		</div>
 	</div>
     <script type="text/javascript" src="./script.js">
